volnux/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    DEFAULT_EXECUTOR
    GRPC_EXECUTOR
    PROCESSPOOL_EXECUTOR
    TCP_EXECUTOR
    THREADPOOL_EXECUTOR

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> variable_declaration
Rule 5     statement -> expression
Rule 6     statement -> directive
Rule 7     expression -> expression POINTER expression
Rule 8     expression -> expression PPOINTER expression
Rule 9     expression -> expression PARALLEL expression
Rule 10    expression -> descriptor POINTER expression
Rule 11    expression -> descriptor PPOINTER expression
Rule 12    expression -> factor RETRY task
Rule 13    expression -> task RETRY factor
Rule 14    expression -> expression_groupings RETRY factor
Rule 15    expression -> factor RETRY expression_groupings
Rule 16    ternary_expression -> comparison_expression QUESTION expression COLON expression
Rule 17    comparison_expression -> expression EQ expression
Rule 18    comparison_expression -> expression NE expression
Rule 19    comparison_expression -> expression LANGLE expression
Rule 20    comparison_expression -> expression RANGLE expression
Rule 21    comparison_expression -> expression LE expression
Rule 22    comparison_expression -> expression GE expression
Rule 23    null_coalesce_expression -> expression NULLCOALESCE expression
Rule 24    expression -> term
Rule 25    term -> task
Rule 26    term -> expression_groupings
Rule 27    term -> value
Rule 28    term -> variable_reference
Rule 29    task -> meta_event
Rule 30    task -> meta_event LBRACKET assigment_expression_group RBRACKET
Rule 31    meta_event -> meta_mode LANGLE IDENTIFIER RANGLE
Rule 32    meta_event -> meta_mode LANGLE IDENTIFIER DOUBLE_COLON IDENTIFIER RANGLE
Rule 33    meta_mode -> MAP
Rule 34    meta_mode -> FILTER
Rule 35    meta_mode -> REDUCE
Rule 36    meta_mode -> FOREACH
Rule 37    meta_mode -> FLATMAP
Rule 38    meta_mode -> FANOUT
Rule 39    directive -> VAR_DECL COLON scalar_value
Rule 40    variable_declaration -> VAR_DECL ASSIGN value
Rule 41    value -> list
Rule 42    value -> map
Rule 43    value -> arithmetic_expr
Rule 44    value -> null_value
Rule 45    value -> comparison_expression
Rule 46    value -> ternary_expression
Rule 47    value -> null_coalesce_expression
Rule 48    map -> LCURLY_BRACKET map_entries RCURLY_BRACKET
Rule 49    map_entries -> empty
Rule 50    map_entries -> map_entry
Rule 51    map_entries -> map_entries SEPARATOR map_entry
Rule 52    map_entry -> STRING_LITERAL COLON value
Rule 53    list -> LBRACKET list_elements RBRACKET
Rule 54    list_elements -> value
Rule 55    list_elements -> list_elements SEPARATOR value
Rule 56    list_elements -> empty
Rule 57    empty -> <empty>
Rule 58    scalar_value -> INT
Rule 59    scalar_value -> FLOAT
Rule 60    scalar_value -> BOOLEAN
Rule 61    scalar_value -> STRING_LITERAL
Rule 62    null_value -> NULL
Rule 63    variable_reference -> VAR_ACCESS
Rule 64    variable_reference -> VAR_ACCESS DOT IDENTIFIER
Rule 65    descriptor -> INT
Rule 66    factor -> INT
Rule 67    factor -> FLOAT
Rule 68    factor -> variable_reference
Rule 69    task -> task_name
Rule 70    task -> IDENTIFIER DOUBLE_COLON task_name
Rule 71    task_name -> IDENTIFIER
Rule 72    task_name -> IDENTIFIER LBRACKET assigment_expression_group RBRACKET
Rule 73    conditional_group -> expression SEPARATOR expression
Rule 74    conditional_group -> conditional_group SEPARATOR expression
Rule 75    task -> task LPAREN conditional_group RPAREN
Rule 76    assignment_expression -> IDENTIFIER ASSIGN value
Rule 77    assigment_expression_group -> assignment_expression
Rule 78    assigment_expression_group -> assignment_expression SEPARATOR assignment_expression
Rule 79    assigment_expression_group -> assigment_expression_group SEPARATOR assignment_expression
Rule 80    expression_groupings -> LCURLY_BRACKET expression RCURLY_BRACKET
Rule 81    expression_groupings -> LCURLY_BRACKET expression RCURLY_BRACKET LBRACKET assigment_expression_group RBRACKET
Rule 82    arithmetic_expr -> logical_or_expression
Rule 83    logical_or_expression -> logical_or_expression PARALLEL logical_and_expression
Rule 84    logical_or_expression -> logical_and_expression
Rule 85    logical_and_expression -> logical_and_expression LOGICAL_AND bitwise_or_expression
Rule 86    logical_and_expression -> bitwise_or_expression
Rule 87    bitwise_or_expression -> bitwise_or_expression BITWISE_OR bitwise_xor_expression
Rule 88    bitwise_or_expression -> bitwise_xor_expression
Rule 89    bitwise_xor_expression -> bitwise_xor_expression BITWISE_XOR bitwise_and_expression
Rule 90    bitwise_xor_expression -> bitwise_and_expression
Rule 91    bitwise_and_expression -> bitwise_and_expression BITWISE_AND arith_comparison_expression
Rule 92    bitwise_and_expression -> arith_comparison_expression
Rule 93    arith_comparison_expression -> arith_comparison_expression EQ shift_expression
Rule 94    arith_comparison_expression -> arith_comparison_expression NE shift_expression
Rule 95    arith_comparison_expression -> arith_comparison_expression LANGLE shift_expression
Rule 96    arith_comparison_expression -> arith_comparison_expression RANGLE shift_expression
Rule 97    arith_comparison_expression -> arith_comparison_expression LE shift_expression
Rule 98    arith_comparison_expression -> arith_comparison_expression GE shift_expression
Rule 99    arith_comparison_expression -> shift_expression
Rule 100   shift_expression -> shift_expression LSHL additive_expression
Rule 101   shift_expression -> shift_expression LSHR additive_expression
Rule 102   shift_expression -> shift_expression ASHR additive_expression
Rule 103   shift_expression -> additive_expression
Rule 104   additive_expression -> additive_expression PLUS multiplicative_expression
Rule 105   additive_expression -> additive_expression MINUS multiplicative_expression
Rule 106   additive_expression -> multiplicative_expression
Rule 107   multiplicative_expression -> multiplicative_expression DIV unary_expression
Rule 108   multiplicative_expression -> multiplicative_expression MOD unary_expression
Rule 109   multiplicative_expression -> multiplicative_expression RETRY unary_expression
Rule 110   multiplicative_expression -> unary_expression
Rule 111   unary_expression -> LOGICAL_NOT unary_expression
Rule 112   unary_expression -> BITWISE_NOT unary_expression
Rule 113   unary_expression -> MINUS unary_expression
Rule 114   unary_expression -> primary_expression
Rule 115   primary_expression -> LPAREN arithmetic_expr RPAREN
Rule 116   primary_expression -> arithmetic_factor
Rule 117   arithmetic_factor -> INT
Rule 118   arithmetic_factor -> FLOAT
Rule 119   arithmetic_factor -> STRING_LITERAL
Rule 120   arithmetic_factor -> variable_reference

Terminals, with rules where they appear

ASHR                 : 102
ASSIGN               : 40 76
BITWISE_AND          : 91
BITWISE_NOT          : 112
BITWISE_OR           : 87
BITWISE_XOR          : 89
BOOLEAN              : 60
COLON                : 16 39 52
COMMENT              : 
DEFAULT_EXECUTOR     : 
DIV                  : 107
DOT                  : 64
DOUBLE_COLON         : 32 70
EQ                   : 17 93
FANOUT               : 38
FILTER               : 34
FLATMAP              : 37
FLOAT                : 59 67 118
FOREACH              : 36
GE                   : 22 98
GRPC_EXECUTOR        : 
IDENTIFIER           : 31 32 32 64 70 71 72 76
INT                  : 58 65 66 117
LANGLE               : 19 31 32 95
LBRACKET             : 30 53 72 81
LCURLY_BRACKET       : 48 80 81
LE                   : 21 97
LOGICAL_AND          : 85
LOGICAL_NOT          : 111
LPAREN               : 75 115
LSHL                 : 100
LSHR                 : 101
MAP                  : 33
MINUS                : 105 113
MOD                  : 108
NE                   : 18 94
NULL                 : 62
NULLCOALESCE         : 23
PARALLEL             : 9 83
PLUS                 : 104
POINTER              : 7 10
PPOINTER             : 8 11
PROCESSPOOL_EXECUTOR : 
QUESTION             : 16
RANGLE               : 20 31 32 96
RBRACKET             : 30 53 72 81
RCURLY_BRACKET       : 48 80 81
REDUCE               : 35
RETRY                : 12 13 14 15 109
RPAREN               : 75 115
SEPARATOR            : 51 55 73 74 78 79
STRING_LITERAL       : 52 61 119
TCP_EXECUTOR         : 
THREADPOOL_EXECUTOR  : 
VAR_ACCESS           : 63 64
VAR_DECL             : 39 40
error                : 

Nonterminals, with rules where they appear

additive_expression  : 100 101 102 103 104 105
arith_comparison_expression : 91 92 93 94 95 96 97 98
arithmetic_expr      : 43 115
arithmetic_factor    : 116
assigment_expression_group : 30 72 79 81
assignment_expression : 77 78 78 79
bitwise_and_expression : 89 90 91
bitwise_or_expression : 85 86 87
bitwise_xor_expression : 87 88 89
comparison_expression : 16 45
conditional_group    : 74 75
descriptor           : 10 11
directive            : 6
empty                : 49 56
expression           : 5 7 7 8 8 9 9 10 11 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 73 73 74 80 81
expression_groupings : 14 15 26
factor               : 12 13 14 15
list                 : 41
list_elements        : 53 55
logical_and_expression : 83 84 85
logical_or_expression : 82 83
map                  : 42
map_entries          : 48 51
map_entry            : 50 51
meta_event           : 29 30
meta_mode            : 31 32
multiplicative_expression : 104 105 106 107 108 109
null_coalesce_expression : 47
null_value           : 44
primary_expression   : 114
program              : 0
scalar_value         : 39
shift_expression     : 93 94 95 96 97 98 99 100 101 102
statement            : 2 3
statement_list       : 1 3
task                 : 12 13 25 75
task_name            : 69 70
term                 : 24
ternary_expression   : 46
unary_expression     : 107 108 109 110 111 112 113
value                : 27 40 52 54 55 76
variable_declaration : 4
variable_reference   : 28 68 120

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . variable_declaration
    (5) statement -> . expression
    (6) statement -> . directive
    (40) variable_declaration -> . VAR_DECL ASSIGN value
    (7) expression -> . expression POINTER expression
    (8) expression -> . expression PPOINTER expression
    (9) expression -> . expression PARALLEL expression
    (10) expression -> . descriptor POINTER expression
    (11) expression -> . descriptor PPOINTER expression
    (12) expression -> . factor RETRY task
    (13) expression -> . task RETRY factor
    (14) expression -> . expression_groupings RETRY factor
    (15) expression -> . factor RETRY expression_groupings
    (24) expression -> . term
    (39) directive -> . VAR_DECL COLON scalar_value
    (65) descriptor -> . INT
    (66) factor -> . INT
    (67) factor -> . FLOAT
    (68) factor -> . variable_reference
    (29) task -> . meta_event
    (30) task -> . meta_event LBRACKET assigment_expression_group RBRACKET
    (69) task -> . task_name
    (70) task -> . IDENTIFIER DOUBLE_COLON task_name
    (75) task -> . task LPAREN conditional_group RPAREN
    (80) expression_groupings -> . LCURLY_BRACKET expression RCURLY_BRACKET
    (81) expression_groupings -> . LCURLY_BRACKET expression RCURLY_BRACKET LBRACKET assigment_expression_group RBRACKET
    (25) term -> . task
    (26) term -> . expression_groupings
    (27) term -> . value
    (28) term -> . variable_reference
    (63) variable_reference -> . VAR_ACCESS
    (64) variable_reference -> . VAR_ACCESS DOT IDENTIFIER
    (31) meta_event -> . meta_mode LANGLE IDENTIFIER RANGLE
    (32) meta_event -> . meta_mode LANGLE IDENTIFIER DOUBLE_COLON IDENTIFIER RANGLE
    (71) task_name -> . IDENTIFIER
    (72) task_name -> . IDENTIFIER LBRACKET assigment_expression_group RBRACKET
    (41) value -> . list
    (42) value -> . map
    (43) value -> . arithmetic_expr
    (44) value -> . null_value
    (45) value -> . comparison_expression
    (46) value -> . ternary_expression
    (47) value -> . null_coalesce_expression
    (33) meta_mode -> . MAP
    (34) meta_mode -> . FILTER
    (35) meta_mode -> . REDUCE
    (36) meta_mode -> . FOREACH
    (37) meta_mode -> . FLATMAP
    (38) meta_mode -> . FANOUT
    (53) list -> . LBRACKET list_elements RBRACKET
    (48) map -> . LCURLY_BRACKET map_entries RCURLY_BRACKET
    (82) arithmetic_expr -> . logical_or_expression
    (62) null_value -> . NULL
    (17) comparison_expression -> . expression EQ expression
    (18) comparison_expression -> . expression NE expression
    (19) comparison_expression -> . expression LANGLE expression
    (20) comparison_expression -> . expression RANGLE expression
    (21) comparison_expression -> . expression LE expression
    (22) comparison_expression -> . expression GE expression
    (16) ternary_expression -> . comparison_expression QUESTION expression COLON expression
    (23) null_coalesce_expression -> . expression NULLCOALESCE expression
    (83) logical_or_expression -> . logical_or_expression PARALLEL logical_and_expression
    (84) logical_or_expression -> . logical_and_expression
    (85) logical_and_expression -> . logical_and_expression LOGICAL_AND bitwise_or_expression
    (86) logical_and_expression -> . bitwise_or_expression
    (87) bitwise_or_expression -> . bitwise_or_expression BITWISE_OR bitwise_xor_expression
    (88) bitwise_or_expression -> . bitwise_xor_expression
    (89) bitwise_xor_expression -> . bitwise_xor_expression BITWISE_XOR bitwise_and_expression
    (90) bitwise_xor_expression -> . bitwise_and_expression
    (91) bitwise_and_expression -> . bitwise_and_expression BITWISE_AND arith_comparison_expression
    (92) bitwise_and_expression -> . arith_comparison_expression
    (93) arith_comparison_expression -> . arith_comparison_expression EQ shift_expression
    (94) arith_comparison_expression -> . arith_comparison_expression NE shift_expression
    (95) arith_comparison_expression -> . arith_comparison_expression LANGLE shift_expression
    (96) arith_comparison_expression -> . arith_comparison_expression RANGLE shift_expression
    (97) arith_comparison_expression -> . arith_comparison_expression LE shift_expression
    (98) arith_comparison_expression -> . arith_comparison_expression GE shift_expression
    (99) arith_comparison_expression -> . shift_expression
    (100) shift_expression -> . shift_expression LSHL additive_expression
    (101) shift_expression -> . shift_expression LSHR additive_expression
    (102) shift_expression -> . shift_expression ASHR additive_expression
    (103) shift_expression -> . additive_expression
    (104) additive_expression -> . additive_expression PLUS multiplicative_expression
    (105) additive_expression -> . additive_expression MINUS multiplicative_expression
    (106) additive_expression -> . multiplicative_expression
    (107) multiplicative_expression -> . multiplicative_expression DIV unary_expression
    (108) multiplicative_expression -> . multiplicative_expression MOD unary_expression
    (109) multiplicative_expression -> . multiplicative_expression RETRY unary_expression
    (110) multiplicative_expression -> . unary_expression
    (111) unary_expression -> . LOGICAL_NOT unary_expression
    (112) unary_expression -> . BITWISE_NOT unary_expression
    (113) unary_expression -> . MINUS unary_expression
    (114) unary_expression -> . primary_expression
    (115) primary_expression -> . LPAREN arithmetic_expr RPAREN
    (116) primary_expression -> . arithmetic_factor
    (117) arithmetic_factor -> . INT
    (118) arithmetic_factor -> . FLOAT
    (119) arithmetic_factor -> . STRING_LITERAL
    (120) arithmetic_factor -> . variable_reference

    VAR_DECL        shift and go to state 7
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    IDENTIFIER      shift and go to state 20
    LCURLY_BRACKET  shift and go to state 22
    VAR_ACCESS      shift and go to state 23
    MAP             shift and go to state 32
    FILTER          shift and go to state 33
    REDUCE          shift and go to state 34
    FOREACH         shift and go to state 35
    FLATMAP         shift and go to state 36
    FANOUT          shift and go to state 37
    LBRACKET        shift and go to state 18
    NULL            shift and go to state 39
    LOGICAL_NOT     shift and go to state 50
    BITWISE_NOT     shift and go to state 51
    MINUS           shift and go to state 48
    LPAREN          shift and go to state 21
    STRING_LITERAL  shift and go to state 54

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    variable_declaration           shift and go to state 4
    expression                     shift and go to state 5
    directive                      shift and go to state 6
    value                          shift and go to state 8
    descriptor                     shift and go to state 9
    factor                         shift and go to state 10
    task                           shift and go to state 11
    expression_groupings           shift and go to state 12
    term                           shift and go to state 13
    variable_reference             shift and go to state 16
    meta_event                     shift and go to state 17
    task_name                      shift and go to state 19
    meta_mode                      shift and go to state 24
    list                           shift and go to state 25
    map                            shift and go to state 26
    arithmetic_expr                shift and go to state 27
    null_value                     shift and go to state 28
    comparison_expression          shift and go to state 29
    ternary_expression             shift and go to state 30
    null_coalesce_expression       shift and go to state 31
    logical_or_expression          shift and go to state 38
    logical_and_expression         shift and go to state 40
    bitwise_or_expression          shift and go to state 41
    bitwise_xor_expression         shift and go to state 42
    bitwise_and_expression         shift and go to state 43
    arith_comparison_expression    shift and go to state 44
    shift_expression               shift and go to state 45
    additive_expression            shift and go to state 46
    multiplicative_expression      shift and go to state 47
    unary_expression               shift and go to state 49
    primary_expression             shift and go to state 52
    arithmetic_factor              shift and go to state 53

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (4) statement -> . variable_declaration
    (5) statement -> . expression
    (6) statement -> . directive
    (40) variable_declaration -> . VAR_DECL ASSIGN value
    (7) expression -> . expression POINTER expression
    (8) expression -> . expression PPOINTER expression
    (9) expression -> . expression PARALLEL expression
    (10) expression -> . descriptor POINTER expression
    (11) expression -> . descriptor PPOINTER expression
    (12) expression -> . factor RETRY task
    (13) expression -> . task RETRY factor
    (14) expression -> . expression_groupings RETRY factor
    (15) expression -> . factor RETRY expression_groupings
    (24) expression -> . term
    (39) directive -> . VAR_DECL COLON scalar_value
    (65) descriptor -> . INT
    (66) factor -> . INT
    (67) factor -> . FLOAT
    (68) factor -> . variable_reference
    (29) task -> . meta_event
    (30) task -> . meta_event LBRACKET assigment_expression_group RBRACKET
    (69) task -> . task_name
    (70) task -> . IDENTIFIER DOUBLE_COLON task_name
    (75) task -> . task LPAREN conditional_group RPAREN
    (80) expression_groupings -> . LCURLY_BRACKET expression RCURLY_BRACKET
    (81) expression_groupings -> . LCURLY_BRACKET expression RCURLY_BRACKET LBRACKET assigment_expression_group RBRACKET
    (25) term -> . task
    (26) term -> . expression_groupings
    (27) term -> . value
    (28) term -> . variable_reference
    (63) variable_reference -> . VAR_ACCESS
    (64) variable_reference -> . VAR_ACCESS DOT IDENTIFIER
    (31) meta_event -> . meta_mode LANGLE IDENTIFIER RANGLE
    (32) meta_event -> . meta_mode LANGLE IDENTIFIER DOUBLE_COLON IDENTIFIER RANGLE
    (71) task_name -> . IDENTIFIER
    (72) task_name -> . IDENTIFIER LBRACKET assigment_expression_group RBRACKET
    (41) value -> . list
    (42) value -> . map
    (43) value -> . arithmetic_expr
    (44) value -> . null_value
    (45) value -> . comparison_expression
    (46) value -> . ternary_expression
    (47) value -> . null_coalesce_expression
    (33) meta_mode -> . MAP
    (34) meta_mode -> . FILTER
    (35) meta_mode -> . REDUCE
    (36) meta_mode -> . FOREACH
    (37) meta_mode -> . FLATMAP
    (38) meta_mode -> . FANOUT
    (53) list -> . LBRACKET list_elements RBRACKET
    (48) map -> . LCURLY_BRACKET map_entries RCURLY_BRACKET
    (82) arithmetic_expr -> . logical_or_expression
    (62) null_value -> . NULL
    (17) comparison_expression -> . expression EQ expression
    (18) comparison_expression -> . expression NE expression
    (19) comparison_expression -> . expression LANGLE expression
    (20) comparison_expression -> . expression RANGLE expression
    (21) comparison_expression -> . expression LE expression
    (22) comparison_expression -> . expression GE expression
    (16) ternary_expression -> . comparison_expression QUESTION expression COLON expression
    (23) null_coalesce_expression -> . expression NULLCOALESCE expression
    (83) logical_or_expression -> . logical_or_expression PARALLEL logical_and_expression
    (84) logical_or_expression -> . logical_and_expression
    (85) logical_and_expression -> . logical_and_expression LOGICAL_AND bitwise_or_expression
    (86) logical_and_expression -> . bitwise_or_expression
    (87) bitwise_or_expression -> . bitwise_or_expression BITWISE_OR bitwise_xor_expression
    (88) bitwise_or_expression -> . bitwise_xor_expression
    (89) bitwise_xor_expression -> . bitwise_xor_expression BITWISE_XOR bitwise_and_expression
    (90) bitwise_xor_expression -> . bitwise_and_expression
    (91) bitwise_and_expression -> . bitwise_and_expression BITWISE_AND arith_comparison_expression
    (92) bitwise_and_expression -> . arith_comparison_expression
    (93) arith_comparison_expression -> . arith_comparison_expression EQ shift_expression
    (94) arith_comparison_expression -> . arith_comparison_expression NE shift_expression
    (95) arith_comparison_expression -> . arith_comparison_expression LANGLE shift_expression
    (96) arith_comparison_expression -> . arith_comparison_expression RANGLE shift_expression
    (97) arith_comparison_expression -> . arith_comparison_expression LE shift_expression
    (98) arith_comparison_expression -> . arith_comparison_expression GE shift_expression
    (99) arith_comparison_expression -> . shift_expression
    (100) shift_expression -> . shift_expression LSHL additive_expression
    (101) shift_expression -> . shift_expression LSHR additive_expression
    (102) shift_expression -> . shift_expression ASHR additive_expression
    (103) shift_expression -> . additive_expression
    (104) additive_expression -> . additive_expression PLUS multiplicative_expression
    (105) additive_expression -> . additive_expression MINUS multiplicative_expression
    (106) additive_expression -> . multiplicative_expression
    (107) multiplicative_expression -> . multiplicative_expression DIV unary_expression
    (108) multiplicative_expression -> . multiplicative_expression MOD unary_expression
    (109) multiplicative_expression -> . multiplicative_expression RETRY unary_expression
    (110) multiplicative_expression -> . unary_expression
    (111) unary_expression -> . LOGICAL_NOT unary_expression
    (112) unary_expression -> . BITWISE_NOT unary_expression
    (113) unary_expression -> . MINUS unary_expression
    (114) unary_expression -> . primary_expression
    (115) primary_expression -> . LPAREN arithmetic_expr RPAREN
    (116) primary_expression -> . arithmetic_factor
    (117) arithmetic_factor -> . INT
    (118) arithmetic_factor -> . FLOAT
    (119) arithmetic_factor -> . STRING_LITERAL
    (120) arithmetic_factor -> . variable_reference

    $end            reduce using rule 1 (program -> statement_list .)
    VAR_DECL        shift and go to state 7
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    IDENTIFIER      shift and go to state 20
    LCURLY_BRACKET  shift and go to state 22
    VAR_ACCESS      shift and go to state 23
    MAP             shift and go to state 32
    FILTER          shift and go to state 33
    REDUCE          shift and go to state 34
    FOREACH         shift and go to state 35
    FLATMAP         shift and go to state 36
    FANOUT          shift and go to state 37
    LBRACKET        shift and go to state 18
    NULL            shift and go to state 39
    LOGICAL_NOT     shift and go to state 50
    BITWISE_NOT     shift and go to state 51
    MINUS           shift and go to state 48
    LPAREN          shift and go to state 21
    STRING_LITERAL  shift and go to state 54

    statement                      shift and go to state 55
    variable_declaration           shift and go to state 4
    expression                     shift and go to state 5
    directive                      shift and go to state 6
    value                          shift and go to state 8
    descriptor                     shift and go to state 9
    factor                         shift and go to state 10
    task                           shift and go to state 11
    expression_groupings           shift and go to state 12
    term                           shift and go to state 13
    variable_reference             shift and go to state 16
    meta_event                     shift and go to state 17
    task_name                      shift and go to state 19
    meta_mode                      shift and go to state 24
    list                           shift and go to state 25
    map                            shift and go to state 26
    arithmetic_expr                shift and go to state 27
    null_value                     shift and go to state 28
    comparison_expression          shift and go to state 29
    ternary_expression             shift and go to state 30
    null_coalesce_expression       shift and go to state 31
    logical_or_expression          shift and go to state 38
    logical_and_expression         shift and go to state 40
    bitwise_or_expression          shift and go to state 41
    bitwise_xor_expression         shift and go to state 42
    bitwise_and_expression         shift and go to state 43
    arith_comparison_expression    shift and go to state 44
    shift_expression               shift and go to state 45
    additive_expression            shift and go to state 46
    multiplicative_expression      shift and go to state 47
    unary_expression               shift and go to state 49
    primary_expression             shift and go to state 52
    arithmetic_factor              shift and go to state 53

state 3

    (2) statement_list -> statement .

    VAR_DECL        reduce using rule 2 (statement_list -> statement .)
    INT             reduce using rule 2 (statement_list -> statement .)
    FLOAT           reduce using rule 2 (statement_list -> statement .)
    IDENTIFIER      reduce using rule 2 (statement_list -> statement .)
    LCURLY_BRACKET  reduce using rule 2 (statement_list -> statement .)
    VAR_ACCESS      reduce using rule 2 (statement_list -> statement .)
    MAP             reduce using rule 2 (statement_list -> statement .)
    FILTER          reduce using rule 2 (statement_list -> statement .)
    REDUCE          reduce using rule 2 (statement_list -> statement .)
    FOREACH         reduce using rule 2 (statement_list -> statement .)
    FLATMAP         reduce using rule 2 (statement_list -> statement .)
    FANOUT          reduce using rule 2 (statement_list -> statement .)
    LBRACKET        reduce using rule 2 (statement_list -> statement .)
    NULL            reduce using rule 2 (statement_list -> statement .)
    LOGICAL_NOT     reduce using rule 2 (statement_list -> statement .)
    BITWISE_NOT     reduce using rule 2 (statement_list -> statement .)
    MINUS           reduce using rule 2 (statement_list -> statement .)
    LPAREN          reduce using rule 2 (statement_list -> statement .)
    STRING_LITERAL  reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)


state 4

    (4) statement -> variable_declaration .

    VAR_DECL        reduce using rule 4 (statement -> variable_declaration .)
    INT             reduce using rule 4 (statement -> variable_declaration .)
    FLOAT           reduce using rule 4 (statement -> variable_declaration .)
    IDENTIFIER      reduce using rule 4 (statement -> variable_declaration .)
    LCURLY_BRACKET  reduce using rule 4 (statement -> variable_declaration .)
    VAR_ACCESS      reduce using rule 4 (statement -> variable_declaration .)
    MAP             reduce using rule 4 (statement -> variable_declaration .)
    FILTER          reduce using rule 4 (statement -> variable_declaration .)
    REDUCE          reduce using rule 4 (statement -> variable_declaration .)
    FOREACH         reduce using rule 4 (statement -> variable_declaration .)
    FLATMAP         reduce using rule 4 (statement -> variable_declaration .)
    FANOUT          reduce using rule 4 (statement -> variable_declaration .)
    LBRACKET        reduce using rule 4 (statement -> variable_declaration .)
    NULL            reduce using rule 4 (statement -> variable_declaration .)
    LOGICAL_NOT     reduce using rule 4 (statement -> variable_declaration .)
    BITWISE_NOT     reduce using rule 4 (statement -> variable_declaration .)
    MINUS           reduce using rule 4 (statement -> variable_declaration .)
    LPAREN          reduce using rule 4 (statement -> variable_declaration .)
    STRING_LITERAL  reduce using rule 4 (statement -> variable_declaration .)
    $end            reduce using rule 4 (statement -> variable_declaration .)


state 5

    (5) statement -> expression .
    (7) expression -> expression . POINTER expression
    (8) expression -> expression . PPOINTER expression
    (9) expression -> expression . PARALLEL expression
    (17) comparison_expression -> expression . EQ expression
    (18) comparison_expression -> expression . NE expression
    (19) comparison_expression -> expression . LANGLE expression
    (20) comparison_expression -> expression . RANGLE expression
    (21) comparison_expression -> expression . LE expression
    (22) comparison_expression -> expression . GE expression
    (23) null_coalesce_expression -> expression . NULLCOALESCE expression

    VAR_DECL        reduce using rule 5 (statement -> expression .)
    INT             reduce using rule 5 (statement -> expression .)
    FLOAT           reduce using rule 5 (statement -> expression .)
    IDENTIFIER      reduce using rule 5 (statement -> expression .)
    LCURLY_BRACKET  reduce using rule 5 (statement -> expression .)
    VAR_ACCESS      reduce using rule 5 (statement -> expression .)
    MAP             reduce using rule 5 (statement -> expression .)
    FILTER          reduce using rule 5 (statement -> expression .)
    REDUCE          reduce using rule 5 (statement -> expression .)
    FOREACH         reduce using rule 5 (statement -> expression .)
    FLATMAP         reduce using rule 5 (statement -> expression .)
    FANOUT          reduce using rule 5 (statement -> expression .)
    LBRACKET        reduce using rule 5 (statement -> expression .)
    NULL            reduce using rule 5 (statement -> expression .)
    LOGICAL_NOT     reduce using rule 5 (statement -> expression .)
    BITWISE_NOT     reduce using rule 5 (statement -> expression .)
    MINUS           reduce using rule 5 (statement -> expression .)
    LPAREN          reduce using rule 5 (statement -> expression .)
    STRING_LITERAL  reduce using rule 5 (statement -> expression .)
    $end            reduce using rule 5 (statement -> expression .)
    POINTER         shift and go to state 56
    PPOINTER        shift and go to state 57
    PARALLEL        shift and go to state 58
    EQ              shift and go to state 59
    NE              shift and go to state 60
    LANGLE          shift and go to state 61
    RANGLE          shift and go to state 62
    LE              shift and go to state 63
    GE              shift and go to state 64
    NULLCOALESCE    shift and go to state 65


state 6

    (6) statement -> directive .

    VAR_DECL        reduce using rule 6 (statement -> directive .)
    INT             reduce using rule 6 (statement -> directive .)
    FLOAT           reduce using rule 6 (statement -> directive .)
    IDENTIFIER      reduce using rule 6 (statement -> directive .)
    LCURLY_BRACKET  reduce using rule 6 (statement -> directive .)
    VAR_ACCESS      reduce using rule 6 (statement -> directive .)
    MAP             reduce using rule 6 (statement -> directive .)
    FILTER          reduce using rule 6 (statement -> directive .)
    REDUCE          reduce using rule 6 (statement -> directive .)
    FOREACH         reduce using rule 6 (statement -> directive .)
    FLATMAP         reduce using rule 6 (statement -> directive .)
    FANOUT          reduce using rule 6 (statement -> directive .)
    LBRACKET        reduce using rule 6 (statement -> directive .)
    NULL            reduce using rule 6 (statement -> directive .)
    LOGICAL_NOT     reduce using rule 6 (statement -> directive .)
    BITWISE_NOT     reduce using rule 6 (statement -> directive .)
    MINUS           reduce using rule 6 (statement -> directive .)
    LPAREN          reduce using rule 6 (statement -> directive .)
    STRING_LITERAL  reduce using rule 6 (statement -> directive .)
    $end            reduce using rule 6 (statement -> directive .)


state 7

    (40) variable_declaration -> VAR_DECL . ASSIGN value
    (39) directive -> VAR_DECL . COLON scalar_value

    ASSIGN          shift and go to state 66
    COLON           shift and go to state 67


state 8

    (27) term -> value .
